tests/ui/comparison/src/transmute_collection.stderr
error: transmute from `std::vec::Vec<u8>` to `std::vec::Vec<u32>` with mismatched layout is unsound
  --> tests/ui/comparison/src/transmute_collection.rs:7:17
   |
LL |         let v = transmute::<_, Vec<u32>>(vec![0u8]);
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^---------^
   |                                          |
   |                                          casted from this
   |
   = note: `#[deny(rpl::unsound_collection_transmute)]` on by default

error: transmute from `std::vec::Vec<u8>` to `std::vec::Vec<u32>` with mismatched layout is unsound
  --> tests/ui/comparison/src/transmute_collection.rs:23:17
   |
LL |         let v = transmute_vec::<u8, u32>(vec![0u8]);
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^---------^
   |                                          |
   |                                          casted from this

error: transmute from `std::vec::Vec<u8>` to `std::vec::Vec<u32>` with mismatched layout is unsound
  --> tests/ui/comparison/src/transmute_collection.rs:36:17
   |
LL |         let v = vec![0u8];
   |                 --------- casted from this
...
LL |         let v = transmute::<_, Vec<u32>>(v);
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

